opentreemap/treemap/css/sass/partials/_map.scss
// Partial: Map Page

.map {
    left: 0;
    background: $well-color;
    position: absolute;
    bottom: 40px;
    top: 0;
    right: 350px; 
}

@each $direction in right, left, top, bottom {
    .leaflet-#{$direction} {
        z-index: 99;
        
        .leaflet-control {
            margin-#{$direction}: 16px;
        }
    }
}

.leaflet-control-layers-toggle {
    background-image: url(/static/img/leaflet/layers.png) !important;
}

.leaflet-retina {
    .leaflet-control-layers-toggle {
        background-image: url(/static/img/leaflet/layers-2x.png) !important;
    }
}


.leaflet-control {

    &.leaflet-control-attribution {
        margin-bottom: 12px;
        margin-right: 0;
    }

    &.leaflet-control-zoom {

        > a {
            color: black;
        }
    }

    &.leaflet-control-layers {
        .leaflet-control-layers-list {
            margin: 0;
        }
        .leaflet-control-layers-base {

            label {
                font-size: 1em;
                padding: 0 5px;

                .leaflet-control-layers-selector {
                    margin: 0 4px 0 0;

                    & + span {
                        top: 2px;
                        position: relative;
                    }
                }
            }
        }
    }
}

.leaflet-popup-close-button {
    margin-top: 6px;
    margin-right: 4px;
}

.leaflet-popup-content {
    margin: 18px 20px;

    h4 {
        margin: 0 0 0.5em;
    }
    address {
        margin-bottom: 15px;

        strong {
            clear: both;
            display: block;
        }
    }
}

span.tt-dropdown-menu {
    margin-top: 10px;
    padding: 0;
    width: 221px;
    font-size: 0.75em;
    position: relative;
    border: 1px solid $well-color;
    background: white;
    border-radius: 6px;
    box-shadow: 0px 3px 0px rgba(0, 3, 0, 0.3);

    &:before {
        content: '';
        width: 0;
        height: 0;
        position: absolute;
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        border-bottom: 10px solid $well-color;
        top: -10px;
        left: 10px;
    }

    .tt-suggestions {
        max-height: 300px;
        overflow: auto;

        .tt-suggestion {
            padding: 8px 10px;
            border-bottom: 1px solid $light-gray-color;
            
            &:hover {
                background-color: $light-gray-color;
            }
            &:last-child {
                border: none;
            }

            p {
                line-height: 1.5em;
                margin: 0;
                font-size: 1em;
            }
        }
    }
}

